--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Assigned tickets</title>
-    <base href="/beta/">
+    <base href="/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/admin-lte/dist/css/AdminLTE.min.css">
@@ -23,6 +23,8 @@
     <script src="node_modules/rxjs/bundles/Rx.js"></script>
     <script src="node_modules/angular2/bundles/angular2.dev.js"></script>
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
+    <script src="node_modules/angular2/bundles/http.dev.js"></script>
+    <script src="node_modules/angular2/bundles/http.dev.js"></script>
 
     <script>
         System.config({
