--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <html>
 <head>
     <title>Assigned tickets</title>
-    <base href="/">
+    <base href="/alpha/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- build:css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/admin-lte/dist/css/AdminLTE.min.css">
     <link rel="stylesheet" href="node_modules/admin-lte/dist/css/skins/skin-blue.min.css">
     <link rel="stylesheet" href="node_modules/admin-lte/plugins/datatables/dataTables.bootstrap.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="styles.css">
+    <!-- endbuild -->
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css">
+
+    <!-- build:js -->
     <script src="node_modules/es6-shim/es6-shim.min.js"></script>
     <script src="node_modules/systemjs/dist/system-polyfills.js"></script>
     <script src="node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
@@ -25,6 +30,7 @@
     <script src="node_modules/angular2/bundles/router.dev.js"></script>
     <script src="node_modules/angular2/bundles/http.dev.js"></script>
     <script src="node_modules/angular2/bundles/http.dev.js"></script>
+    <!-- endbuild -->
 
     <script>
         System.config({
@@ -41,10 +47,8 @@
 </head>
 
 <body class="skin-blue">
-<div class="wrapper">
-
-    <my-app><i class="fa fa-circle-o-notch fa-spin"></i></my-app>
-</div>
-
+    <div class="wrapper">
+        <my-app><i class="fa fa-circle-o-notch fa-spin"></i></my-app>
+    </div>
 </body>
 </html>
