Refactoring, add modals

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </script>
 </head>
 
-<body class="skin-blue">
+<body class="skin-blue sidebar-collapse">
     <div class="wrapper">
         <my-app><i class="fa fa-circle-o-notch fa-spin"></i></my-app>
     </div>
