Update to beta version

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Assigned tickets</title>
-    <base href="/alpha/">
+    <base href="/beta/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- build:css -->
