--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="<%= webpackConfig.metadata.title %>">
 
-  <meta name="msapplication-TileColor" content="#00bcd4">
-  <meta name="theme-color" content="#00bcd4">
+  <meta name="msapplication-TileColor" content="#367FA9">
+  <meta name="theme-color" content="#367FA9">
   <!-- end favicon -->
 
   <!-- base url -->
@@ -19,7 +19,7 @@
 
 </head>
 
-<body class="skin-blue sidebar-collapse">
+<body class="skin-blue">
 <div class="wrapper">
   <app><i class="fa fa-circle-o-notch fa-spin"></i></app>
 </div>
